--- a/src/less/crt/medialist/explorer.less
+++ b/src/less/crt/medialist/explorer.less
@@ -287,7 +287,6 @@
 		width:100%;
 		overflow-y: auto;
 		background-color: @console-bg;
-		opacity: 0.7;
 
  	   .hide-scrollbar();
 	}
