--- a/src/less/crt/plamain.less
+++ b/src/less/crt/plamain.less
@@ -78,6 +78,7 @@
     flex-grow: 1;
     flex-shrink: 1;
     display: none;
+    position: relative; 
 
     &.detailed {
       display: block;
